<resources>
    <string name="app_name">Do_an_nhom9</string>
    <!--btn -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <!-- Strings for dashboard-->
    <string name="hotels">Hotels</string>
    <string name="logo_name">Ycho</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <!-- titles and Descriptions -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_location">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="search_text">Search</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="slogan_name">Lựa chọn của bạn</string>


</resources>